test(GraderTest) : Grader 클래스 테스트 코드 작성
GraderTest : 분기별로 테스트 코드 작성
- compareLottoWinningLotto() : 로또돌의 통계를 계산
- compareNumberOne() ~ compareNumberNothing() : 로또와 당첨 번호, 보너스 번호를 계산하여 등수 책정
- checkRankOne() ~ checkRankNothing() : 로또 번호와 당첨 번호의 같은 숫자의 갯수, 보너스 번호의 같은지 여부를 받아 등수 책정
- calculateEarningRatio() : 구입 금액과 당첨 내역을 비교하여 수익률 계산